--- a/Local Tier List/Components/Pages/Home.razor
+++ b/Local Tier List/Components/Pages/Home.razor
@@ -1,7 +1,7 @@
 ﻿@page "/"
 <link href="css/charactercolor.css" rel="stylesheet" />
 
-<div class="m-4 p-4">
+<div class="m-md-1 p-md-1 m-lg-4 p-lg-4">
 	<h1 class="text-light">Local Tier List Maker</h1>
 	<div class="row col-12 d-flex flex-column text-light m-2">
 		<h5> Tier Lists: </h5>
